# memoscope

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  app.py  cli.py  mock_models.py  pyproject.toml  setup.py  test_hooks.py
.github/workflows/: ci.yml  publish.yml
memoscope/core/: __init__.py  hooks.py
memoscope/server/: __init__.py  app.py
memoscope/server/templates/: index.html
tests/: test_hooks.py
