[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "memoscope"
version = "0.1.0"
description = "Live Model Memory Inspector — a visual debugger for Transformers, SSMs, RWKV, and RNNs"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MEMOSCOPE Contributors" }]
keywords = ["transformer", "mamba", "ssm", "rnn", "interpretability", "memory", "attention", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "jinja2>=3.1.4",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
transformers = ["transformers>=4.40.0", "accelerate>=0.29.0"]
dev = ["pytest>=8.0", "ruff>=0.4.0", "mypy>=1.9.0"]

[project.scripts]
memoscope = "memoscope.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/memoscope"
Documentation = "https://memoscope.readthedocs.io"
Repository = "https://github.com/your-org/memoscope"
Issues = "https://github.com/your-org/memoscope/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memoscope*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
