[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoscope"
version = "0.1.0"
description = "Live Model Memory Inspector — visual debugger for Transformers, SSMs (Mamba), RWKV, and RNNs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "MEMOSCOPE Contributors", email = "hello@memoscope.dev" }]
maintainers = [{ name = "MEMOSCOPE Contributors", email = "hello@memoscope.dev" }]
keywords = [
    "transformer", "mamba", "ssm", "rnn", "lstm",
    "interpretability", "memory", "attention", "visualization",
    "llm", "deep-learning", "pytorch", "debugger"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Debuggers",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "jinja2>=3.1.4",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
transformers = ["transformers>=4.40.0", "accelerate>=0.29.0"]
dev = ["pytest>=8.0", "ruff>=0.4.0", "mypy>=1.9.0", "build>=1.0.0", "twine>=5.0.0"]

[project.scripts]
memoscope = "memoscope.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/memoscope"
Documentation = "https://github.com/your-org/memoscope#readme"
Repository = "https://github.com/your-org/memoscope"
"Bug Tracker" = "https://github.com/your-org/memoscope/issues"
Changelog = "https://github.com/your-org/memoscope/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["memoscope*"]

[tool.setuptools.package-data]
"memoscope.server.templates" = ["*.html"]
"memoscope" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
